first twitterPageProject commit

--- a/twitterClone.html
+++ b/twitterClone.html
@@ -378,7 +378,7 @@
 
                 <div class="smallChimezie-divTwo">
                     <div class="imgsmcTwo">
-                        <img src="../twitterPageProject/asssets/WhatsApp Image 2024-04-10 at 14.45.22_7b468b31.jpg" alt="chimesieImage" class="smallChimezieTwo">
+                        <img src="./asssets/WhatsApp Image 2024-04-10 at 14.45.22_7b468b31.jpg" alt="chimesieImage" class="smallChimezieTwo">
                     </div>
                     
 
@@ -431,7 +431,7 @@
 
                 <div class="smallChimezie-divThree">
                     <div class="imgsmcThree">
-                        <img src="../twitterPageProject/asssets/WhatsApp Image 2024-04-10 at 14.45.22_7b468b31.jpg" alt="chimesieImage" class="smallChimezieThree">
+                        <img src="./asssets/WhatsApp Image 2024-04-10 at 14.45.22_7b468b31.jpg" alt="chimesieImage" class="smallChimezieThree">
                     </div>
                     
 
